src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@import "../variables.less";
@import "../mixins.less";

#show-ad-single {
  position: relative;
  width: 1000px;
  margin: 14px auto;

  .panel-body {
    padding: 10px;
    border-bottom: 1px solid @border-color;

    &:last-child {
      border-bottom: 0;
    }
  }
}

#show-ad-content {
  width: 750px;
  float: left;

  .ad-desc {
    font-size: 14px;

    p {
      margin: 0;
    }
  }
}

#show-ad-toolbar {
  .btn-group > .btn-promote {
    margin-left: 0;
    margin-right: 1px;
    width: 100px;
    height: 30px;
  }

  .btn-group > .btn-promote:not(:first-child):not(:last-child) {
    .border-left-radius(@border-radius-small);
  }

  .promotes-count {
    font-weight: bold;
  }
}

#show-ad-img {
  text-align: center;

  img {
    .img-responsive(inline-block);
  }
}

#show-ad-owner {
  width: 236px;
  margin-left: 14px;
  float: left;

  .user-desc {
    width: 174px;
  }
}

#user-about {
  color: #555;
  font-size: 13px;

  p {
    margin: 0;
  }
}

#user-latest-ads {
  width: 234px;
  padding: 10px 10px 0;

  .thumb {
    border: 1px solid @border-color;
    width: 102px;
    height: 102px;
    float: left;
    margin: 0 10px 10px 0;
    border-radius: @border-radius-base;

    img {
      border-radius: @border-radius-small;
    }

    &:nth-child(2n) {
      margin-right: 0;
    }
  }
}

#ad-content {
  width: 750px;
  overflow-y: auto;
}

@media screen and (max-width: @screen-tablet) {
  #show-ad-single, #show-ad-content, #ad-content {
    width: 100%;
  }
  #show-ad-owner {
    display: none;
  }

  #ad-content {
    img {
      margin-bottom: 10px;
      max-width: 100%;
    }
  }
}

